# AI-Mentor-Prototype

./: .env.example  .gitignore  AGENTS.md  AI_USAGE_DECLARATION.md  ARCHITECTURE_DECISION_REPORT.md  ASSESSMENT_BRIEF.md  BUILD_SPEC.md  DECISIONS.md  IMPLEMENTATION_GUIDE.md  NEXT_STEPS.md  README.md  demo.ipynb  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
samples/: idea_adversarial.txt  idea_mediocre.txt  idea_strong.txt  idea_weak.txt
src/: cli.py  config.py  logging_config.py  mentor.py  prompts.py  schema.py
tests/: test_mentor.py  test_prompt_injection.py  test_schema.py
