[project]
name = "aurstrat-ai-mentor"
version = "0.1.0"
description = "Prompt-engineered startup-idea feedback prototype (Gemini structured output) — Aurstrat AI/ML Internship assessment"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ipykernel>=6.29",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
